Fix position of the filter button when the table is overflowing

--- a/wcfsetup/install/files/style/ui/gridView.scss
+++ b/wcfsetup/install/files/style/ui/gridView.scss
@@ -1,4 +1,4 @@
-.gridView {
+.gridView__tableContainer {
 	overflow: auto;
 }
 
